update dockerfile mvn --add-opens for jdk 9+ weaving